# ai-sketchbook

./: .gitignore
datasets/: name-parsing-data-prompt.txt  name-parsing-training-data.md
mlx-models/: .gitignore  .pdm-python  do-qora.py  pyproject.toml  quantize-gemma.py  readme.md  run-mlx.py  test-mlx.py
papers/: .pdm-python  arxiv-downloader.py  convert-docx.py  convert-paper.py  getmeapaper.sh  parse-paper-gemma.py  parse-paper.py  pyproject.toml  readme.md
python-basics/: README.md  memory.py  pyproject.toml
