[project]
name = "papers"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["requests>=2.32.3", "markitdown>=0.0.1a3", "google-generativeai>=0.8.4", "python-dotenv>=1.0.1", "mlx-lm>=0.21.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
